2008-02-01  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview2.defs:

	Adapt to Mark API changes

2008-01-21  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* configure.ac: post release version bump

=== pygtksourceview 2.1.0 ===

2008-01-21  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* NEWS: updated

	pygtksourceview 2.1.0 released

2008-01-21  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtksourceview2.override: manual wrappers for iter_backward_search and
	iter_forward_search.

	* docs/reference/gtksourceview2-gtksourcebuffer.xml: document the above
	functions

2008-01-21  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/reference/gtksourceview2-gtksourceprintcompositor.xml:
	fix a couple of links.

2008-01-20  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/reference/gtksourceview2-gtksourceprintcompositor.xml:
	add print_compositor_new_from_view function.
	
	* docs/reference/gtksourceview2-gtksourceview.xml: add virtuals.

2008-01-20  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/reference/gtksourceview2-gtksourceprintcompositor.xml: add.
	
	* docs/reference/gtksourceview2-ref.xml:
	* docs/Makefile.am: add gtksourceprintcompositor docs.
	
	* configure.ac: bump to version 2.1.0 and require gtksourceview 2.1.0.
	
	* gtksourceview2.defs: fix NULL in parameters.

2008-01-16  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtksourceview2.defs:
	* gtksourceview2.override: add the new GtkSourcePrintCompositor API.

2008-01-06  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/reference/gtksourceview2-gtksourcestyleschememanager.xml: typo.

2008-01-06  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtksourceview2.defs: Fix null-ok in parameters.
	
	* docs/reference/gtksourceview2-gtksourcemarker.xml: remove old docs.
	
	* docs/reference/gtksourceview2-gtksourcemark.xml: add new mark docs.
	
	* docs/Makefile.am:
	* docs/reference/gtksourceview2-gtksourcebuffer.xml:
	* docs/reference/gtksourceview2-gtksourceview.xml: