@@ -289,62 +289,62 @@ _wrap_gtk_source_language_get_style_ids(PyGObject *self)
 }
 
 %%
-override gtk_source_buffer_get_marks_at_iter kwargs 	 
-static PyObject * 	 
-_wrap_gtk_source_buffer_get_marks_at_iter(PyGObject *self, 	 
-                                          PyObject *args, 	 
-                                          PyObject *kwargs) 	 
-{ 	 
-    static char *kwlist[] = { "iter", "category", NULL }; 	 
+override gtk_source_buffer_get_source_marks_at_iter kwargs
+static PyObject *
+_wrap_gtk_source_buffer_get_source_marks_at_iter(PyGObject *self,
+                                                 PyObject *args,
+                                                 PyObject *kwargs)
+{
+    static char *kwlist[] = { "iter", "category", NULL };
     PyObject    *py_iter, *py_ret;
     gchar       *category;
     GtkTextIter *iter = NULL;
-    GSList      *ret; 	 
+    GSList      *ret;
 
-    if (!PyArg_ParseTupleAndKeywords(args, kwargs, 	 
-                                     "Os:GtkSourceBuffer.get_marks_at_iter", 	 
-                                     kwlist, &py_iter, &category)) 	 
-        return NULL; 	 
+    if (!PyArg_ParseTupleAndKeywords(args, kwargs,
+                                     "Oz:GtkSourceBuffer.get_source_marks_at_iter",
+                                     kwlist, &py_iter, &category))
+        return NULL;
 
-    if (pyg_boxed_check(py_iter, GTK_TYPE_TEXT_ITER)) 	 
-        iter = pyg_boxed_get(py_iter, GtkTextIter); 	 
-    else { 	 
-        PyErr_SetString(PyExc_TypeError, "iter should be a GtkTextIter"); 	 
-        return NULL; 	 
-    }	 
+    if (pyg_boxed_check(py_iter, GTK_TYPE_TEXT_ITER))
+        iter = pyg_boxed_get(py_iter, GtkTextIter);
+    else {
+        PyErr_SetString(PyExc_TypeError, "iter should be a GtkTextIter");
+        return NULL;
+    }
 
-    ret = gtk_source_buffer_get_marks_at_iter(GTK_SOURCE_BUFFER(self->obj), 	 
-                                              iter, category); 	 
+    ret = gtk_source_buffer_get_source_marks_at_iter(GTK_SOURCE_BUFFER(self->obj),
+                                                     iter, category);
 
-    py_ret = gslist_to_pylist_objs (ret); 	 
+    py_ret = gslist_to_pylist_objs (ret);
 
-    return py_ret; 	 
-} 	 
+    return py_ret;
+}
 
 %%
-override gtk_source_buffer_get_marks_at_line kwargs 	 
-static PyObject * 	 
-_wrap_gtk_source_buffer_get_marks_at_line(PyGObject *self, 	 
-                                          PyObject *args, 	 
-                                          PyObject *kwargs) 	 
-{ 	 
-    static char *kwlist[] = { "line", "category", NULL }; 	 
+override gtk_source_buffer_get_source_marks_at_line kwargs
+static PyObject *
+_wrap_gtk_source_buffer_get_source_marks_at_line(PyGObject *self,
+                                                 PyObject *args,
+                                                 PyObject *kwargs)
+{
+    static char *kwlist[] = { "line", "category", NULL };
     PyObject    *py_ret;
     gint        line;
     gchar       *category;
-    GSList      *ret; 	 
+    GSList      *ret;
 
-    if (!PyArg_ParseTupleAndKeywords(args, kwargs, 	 
-                                     "is:GtkSourceBuffer.get_marks_at_iter", 	 
-                                     kwlist, &line, &category)) 	 
+    if (!PyArg_ParseTupleAndKeywords(args, kwargs,
+                                     "iz:GtkSourceBuffer.get_source_marks_at_line",
+                                     kwlist, &line, &category))
         return NULL;
 
-    ret = gtk_source_buffer_get_marks_at_line(GTK_SOURCE_BUFFER(self->obj), 	 
-                                              line, category); 	 
+    ret = gtk_source_buffer_get_source_marks_at_line(GTK_SOURCE_BUFFER(self->obj),
+                                                     line, category);
 
-    py_ret = gslist_to_pylist_objs (ret); 	 
+    py_ret = gslist_to_pylist_objs (ret);
 
-    return py_ret; 	 
+    return py_ret;
 } 	 
 
 %%
